# kaldifeat-cmake-example

./: CMakeLists.txt  README.md  main.cc
.github/workflows/: test-from-github.yaml  test.yaml
